# bevy_vista

./: Cargo.toml  README.md
assets/ui/: main.vista.ron  runtime_widget_doc_demo.vista.ron  test.vista.ron
crates/bevy_vista_macros/: Cargo.toml  README.md
crates/bevy_vista_macros/src/: gen_icons_impl.rs  inspector_impl.rs  lib.rs  widget_impl.rs
docs/: USAGE.md
examples/: custom_inspector_driver.rs  editor_icons_gallery.rs  layout_widgets.rs  quick_full_editor.rs  quick_vista_editor.rs  runtime_load_asset.rs  text_field_showcase.rs
src/: asset.rs  editor_resources.rs  grid.rs  grid.wgsl  icons.rs  lib.rs  theme.rs  widget_doc.rs
src/core/: asset.rs  icons.rs  icons_data.txt  mod.rs
src/core/inspector/: document.rs  mod.rs  reflect.rs  registry.rs  schema.rs
src/core/inspector/runtime/: mod.rs  props.rs  state.rs  sync.rs
src/core/inspector/runtime/driver/: color.rs  mod.rs  number.rs  string.rs  val.rs  vec2.rs
src/core/widget/: mod.rs
src/core/widget/common/: button.rs  image.rs  label.rs  node.rs
src/core/widget/input/: checkbox.rs  color_field.rs  color_field.wgsl  dropdown.rs  number_field.rs  text_field.rs
src/core/widget/layout/: divider.rs  foldout.rs  list_view.rs  mod.rs  scroll_view.rs  split_view.rs  tree_view.rs
src/editor/: blueprint.rs  foldable.rs  grid.wgsl  hierarchy.rs  inspector.rs  inspector_panel.rs  inspector_sync.rs  mod.rs  resources.rs  title_draggable.rs  toolbar.rs  viewport.rs  widget_lib.rs
src/inspector/: mod.rs  reflect.rs  registry.rs  schema.rs
src/inspector/runtime/: mod.rs  panel.rs  props.rs  state.rs  sync.rs
src/inspector/runtime/driver/: bool.rs  choice.rs  color.rs  mod.rs  number.rs  string.rs  val.rs  vec2.rs
src/runtime/: mod.rs  widget_doc.rs
src/widget/: mod.rs
src/widget/common/: button.rs  image.rs  label.rs  mod.rs  node.rs  text.rs
src/widget/input/: checkbox.rs  color_field.rs  dropdown.rs  mod.rs  number_field.rs  numeric_fields.rs  text_field.rs
src/widget/layout/: divider.rs  foldout.rs  list_view.rs  scroll_view.rs  split_view.rs  tree_view.rs
