[workspace]
members = [".", "crates/bevy_vista_macros"]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "std",
    "bevy_ui",
    "bevy_picking",
    "bevy_ui_picking_backend",
    "bevy_ui_render",
    "bevy_image",
    "bevy_state",
    "bevy_text",
    "bevy_log",
    "bevy_winit",
    "x11",
    "reflect_auto_register",
    "serialize",
    "png",
    "jpeg",
    "default_font",
]}
bevy_egui = "0.38.1"
bevy-inspector-egui = "0.35"
serde = { version = "1", features = ["derive"] }
ron = "0.10.1"
base64 = "0.22.1"
bitflags = "2.10.0"
inventory = "0.3.21"
arboard = "3.4.1"
rfd = "0.15.4"
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"

[package]
name = "bevy_vista"
version = "0.17.1"
edition = "2024"
description = "A visual UI editor plugin for Bevy with inspector-driven editing and .vista.ron serialization."
keywords = ["bevy", "editor", "ui"]
categories = ["game-development", "gui"]
license = "Apache-2.0"
repository = "https://github.com/hacbit/bevy_vista"
documentation = "https://docs.rs/bevy_vista"
readme = "README.md"
authors = ["hacbit <hacbit@foxmail.com>"]
exclude = [
    "assets/",
    "crates/",
]

[lib]
name = "bevy_vista"
path = "src/lib.rs"

[dependencies]
bevy.workspace = true
serde.workspace = true
ron.workspace = true
base64.workspace = true
bitflags.workspace = true
inventory.workspace = true
arboard.workspace = true
rfd.workspace = true

[dev-dependencies]
bevy_egui.workspace = true
bevy-inspector-egui.workspace = true

[dependencies.bevy_vista_macros]
version = "0.17.1"
path = "crates/bevy_vista_macros"

[[example]]
# short name for quick testing
name = "full"
path = "examples/quick_full_editor.rs"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
